--- a/index.html
+++ b/index.html
@@ -12,30 +12,18 @@ width="2" height="0">
 </embed> -->
 
 
-<title style="color:blue;">Rebecca L's Website</title>
+<title style="color:blue;">Jason A's Website</title>
 
 <link rel="icon"
-      type="image/png" href="http://www.itsrebeccalbetch.com/low_pony_cropped.png">
-
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123255742-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-123255742-1');
-</script>
+      type="image/jpg" href="jasonbucks.jpg">
 
 </head>
-
-
 
 
 <body>
 
 <CENTER>
-<h1 style="background-color:pink; text-decoration: blink;"><em>Rebecca L.'s Website<em></h1>
+<h1 style="background-color:yellow; text-decoration: blink;"><em>Jason A.'s Website<em></h1>
 
 <br>
 <br>
@@ -44,12 +32,9 @@ width="2" height="0">
 <table cellpadding=5>
 
 <tr><td align=center>
-<a href=http://rebeccal.com/horses.htm>
 
+<img src=derp_jason.jpg alt="derp jason" border=0 height="250"><br>
 
-<img src=smallhorse.jpg alt="Horse pictures" border=0><br>
-
-Horse Website<br>
 </a>
 
 </td>
@@ -63,9 +48,12 @@ Horse Website<br>
 
 <td align=center>
 
+<h4>Hi, it's me! Jason A!</h4>
 
-
-<img id="lowpony" width="100" height="150" src=low_pony.PNG border=0><br>
+<figure>
+<img id="jasonbucks" height="200" src=jasonbucks.jpg border=0>
+<figcaption>But you can call me J Money :)</figcaption>
+</figure>
 <br>
 
 
@@ -79,18 +67,9 @@ Horse Website<br>
 </td>
 
 <td align=center>
-<a href=http://rebeccal.com/puppies.htm>
 
 
-
-<img src=smallpup.jpg alt="Dog pictures" border=0><br>
-
-Dog Website<br>
-</a>
-
-
-
-
+<img src=preppy_jason.jpg alt="preppy jason" height="250" border=0><br>
 
 
 
@@ -103,7 +82,7 @@ Dog Website<br>
   </td>
 <td align=center>
 
-  <a href="Haggadah2020pdf.pdf">Check Out Rebecca L's the Bestelling <em>Cowgirls vs. Aliens Haggadah</em> !</a>
+  <a href="2020_Haggadah_COmputer.pdf">Check Out Jason A's Bestselling <em>Passover Haggadah</em> !</a>
 
 </td>
 </tr>
@@ -115,11 +94,11 @@ Dog Website<br>
 <br><br>
 
 <span id="blinker">
-<h1 style="text-decoration: blink; color:red"> now feat.: pictures of MOVING pups!!!! </h1>
+<h1 style="text-decoration: blink; color:red"> click the pic below for more cool pics ! </h1>
 </span>
 
-<span title="i m classy gal">
-<a href="https://www.youtube.com/watch?v=NjHkSk3sVoc"><img id="doge" src=twinkie_doge.jpeg alt="Dog pictures" border=0><br> </a>
+<span title="hey butts">
+<a href="kissy_eugene.html"><img id="doge" src=heybutts.jpg width="500" alt="hey butts" border=0><br> </a>
 </span>
 
 
