--- a/kissy_eugene.html
+++ b/kissy_eugene.html
@@ -18,11 +18,41 @@
 
 <center>
 
-<h2> such love <3 </h2>
+<tr>
 
-<table>
+<td></td>
+
+<h2> moving pictures ! </h2>
+
+<td></td>
+
+</tr>
 
 <tr>
+
+<td>
+
+<img src=home_on_the_range.gif alt="home on the range" width="200" style="margin:50px 50px" border=0><br>
+
+</td>
+
+<br>
+
+<td>
+
+<img src=im_gonna_vomit_on_you.gif alt="im gonna vomit on you" width="500" style="margin:50px 50px" border=0><br>
+
+</td>
+
+</tr>
+
+<br>
+
+<tr>
+
+<td></td>
+<h2> and static love <3 </h2>
+<td></td>
 
 <td>
 
