--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ width="2" height="0">
 <br><br>
 
 <span id="blinker">
-<h1 style="text-decoration: blink; color:red"> click the pic below for more cool pics ! </h1>
+<h1 style="text-decoration: blink; color:red"> click the pic below for some moving Jason pictures ! </h1>
 </span>
 
 <span title="hey butts">
