--- a/404.html
+++ b/404.html
@@ -6,8 +6,8 @@
 	</title>
 
 	<body>
-		<h1> 404: you're in the wrong place, broski </h1>
-		<a href="./index.html"><img src=subtle_middle_part.jpeg alt="fu"></a>
+		<h1> 404: you're in the wrong place. but look how cute I am. </h1>
+		<a href="./index.html"><img src=suit_jason.jpg alt="fu"></a>
 	</body>
 
 
