--- a/kissy_eugene.html
+++ b/kissy_eugene.html
@@ -40,7 +40,11 @@
 
 <td>
 
-<img src=im_gonna_vomit_on_you.gif alt="im gonna vomit on you" width="500" style="margin:50px 50px" border=0><br>
+<img src=im_gonna_vomit_on_you.gif alt="im gonna vomit on you" width="500" style="margin:50px 50px 50px 0px" border=0><br>
+
+<p>
+  ^ a bonus shirtless dean! have you seen him?
+</p>
 
 </td>
 
