add a back button

--- a/kissy_eugene.html
+++ b/kissy_eugene.html
@@ -3,8 +3,6 @@
 <html>
 <head>
 
-<base target="_blank">
-
 <link rel="stylesheet" href="index.css">
 
 <title style="color:blue;">Eugene Love</title>
@@ -60,7 +58,7 @@
 
 <td>
 
-<img src=kissy_eugene.jpg alt="kissy eugene" width="500" style="margin:50px 50px" border=0><br>
+<img src=kissy_eugene.jpg target="_blank" alt="kissy eugene" width="500" style="margin:50px 50px" border=0><br>
 
 </td>
 
@@ -71,6 +69,10 @@
 <img src=more_kissy_eugene.jpg alt="kissy eugene 2" width="400" style="margin:50px 50px" border=0><br>
 
 </td>
+
+<p>
+<a href="index.html">back</a>
+</p>
 
 </center>
 
