--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ width="2" height="0">
   </td>
 <td align=center>
 
-  <a href="2020_Haggadah_COmputer.pdf">Check Out Jason A's Bestselling <em>Passover Haggadah</em> !</a>
+  Check Out my Bestselling <a href="2020_Haggadah_COmputer.pdf"><em>Passover Haggadah</em></a> !
 
 </td>
 </tr>
