--- a/kissy_eugene.html
+++ b/kissy_eugene.html
@@ -32,6 +32,8 @@
 
 <img src=home_on_the_range.gif alt="home on the range" width="350" style="margin:50px 50px" border=0><br>
 
+did you know: I love a public singalong!
+
 </td>
 
 <br>
@@ -53,7 +55,7 @@
 <tr>
 
 <td></td>
-<h2> and static love <3 </h2>
+<h2> and static love </h2>
 <td></td>
 
 <td>
@@ -67,6 +69,8 @@
 <td>
 
 <img src=more_kissy_eugene.jpg alt="kissy eugene 2" width="400" style="margin:50px 50px" border=0><br>
+
+<333
 
 </td>
 
